--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,17 +1,7 @@
 //fonts
 
-$font-neue: "Neue Montreal",-apple-system,BlinkMacSystemFont,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Segoe UI,sans-serif;
+$font-default: 'Duplicate Sans';
 
 //colors 
 
 $col-pink-300: #f9ecf1;
-$col-pink-800: #ff006b;
-$col-dark-200: rgba(0,0,0,.05);
-$col-dark-300: #8c8c8c;
-$col-dark-400: #8c8c8c;
-$col-dark-900: #0d0d0d;
-$col-gray-300: #f2f2f2;
-$shadow-dark: rgba(0,0,0,.25);
-$shadow-light: hsla(0,0%,100%,.75);
-$shadow-light2: rgba(0,0,0,.75);
-$dynamic-gradient: linear-gradient(90deg,#ff006b,#1500ff);
