--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,5 +3,11 @@
 $font-default: 'Duplicate Sans';
 
 //colors 
-
+//rgba(209,214,222,var(--tw-border-opacity))
+$col-links: #edf0f7;
+$col-side-bar: #f2f6fc;
+$col-profile:#85bb65;
 $col-pink-300: #f9ecf1;
+$col-nav: #fbfbfb;
+$col-text-primary: #050929;
+$col-text-secondary: #8c8fa3;
