--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -28,7 +28,7 @@ h6,
 p {
   margin: 0;
   padding: 0;
-  font-family: $font-neue;
+  font-family: 'Duplicate Sans';
   -webkit-font-smoothing: antialiased;
   text-decoration:none;
   box-decoration-break:none;
