done with apilog nav

--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -35,8 +35,10 @@
         margin-bottom:2rem;
         font-weight:500;
     }
-    hr{
-       color: rgba(209,214,222,1);
-       background-color: rgba(209,214,222,1);;
+    &__hr{
+       width: 100%;
+       height:1px;
+       //color: rgba(209,214,222,1);
+       background-color: rgba(209, 214, 222, 0.747);;
     }
 }
