--- a/src/components/SuccessButton/SuccessButton.scss
+++ b/src/components/SuccessButton/SuccessButton.scss
@@ -1,3 +1,11 @@
 .successbutton{
     background:#06da8f;
+    display:flex;
+    padding:.4rem .4rem;
+    border-radius:.3rem;
+    color:#fff;
+    cursor:pointer;
+    p{
+        margin-right:.3rem;
+    }
 }
