--- a/src/components/Support/Support.scss
+++ b/src/components/Support/Support.scss
@@ -1,7 +1,9 @@
 .support__container{
     position:absolute;
     bottom:1.5rem;
-    right:1rem;
+    right:1.5rem;
+    position:fixed;
+    z-index: 98;
 }
 .support {
     background:#050929;
