--- a/src/pages/AuditLogs/AuditLogs.scss
+++ b/src/pages/AuditLogs/AuditLogs.scss
@@ -9,3 +9,14 @@
     border-top-right-radius: 10px;
     overflow-y: hidden;
 }
+
+@media (max-width: 800px){
+    .auditlogs{
+        width:calc(100vw  - 2rem);
+        overflow-y: visible;
+        
+        margin:0 .5rem;
+        margin-top:.5rem;
+       // overflow: hidden;
+    }
+}
