fixed space issue

--- a/src/components/ApiLog/ApiLog.scss
+++ b/src/components/ApiLog/ApiLog.scss
@@ -7,7 +7,7 @@
     justify-content:space-between;
     height:60px;
     align-items:center;
-    border-bottom:1px solid rgba(209,214,222,1);
+    border-bottom:1px solid rgba(209, 214, 222, 0.534);
     @media(max-width:600px){
         width:fit-content;
         overflow:visible;
