--- a/src/pages/AuditLogs/AuditLogs.scss
+++ b/src/pages/AuditLogs/AuditLogs.scss
@@ -12,11 +12,11 @@
 
 @media (max-width: 800px){
     .auditlogs{
-        width:calc(100vw  - 2rem);
+        width:calc(100vw  - 1rem);
         overflow-y: visible;
         
         margin:0 .5rem;
-        margin-top:.5rem;
+        margin-top:3.5rem;
        // overflow: hidden;
     }
 }
