--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -15,6 +15,8 @@
             left:0;
             top:0;
             z-index: 98;
+            transition:all .4s ease-in-out;
+
         
     }
     &__x{
@@ -62,6 +64,10 @@
 }
 
 .sidebar__hide{
-    left:-305px;
+   @media (max-width:800px){
+      left:-305px;
+      transition:left 1s linear;
+      transition:all .4s linear;
+   }
 }
 
