--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -1,7 +1,31 @@
 @import '../styles/index.scss';
-.Layout{
+.layout{
     display:flex;
     background:$col-side-bar;
     position:relative;
+    // height:inherit;
+    // background:red;
+    @media (max-width: 800px) {
+        // display:block;
+        // overflow:visible;
+        // height:auto;
+    }
+
+    &__menu{
+        position:absolute;
+        left:1.2rem;
+        top:1rem;
+        cursor:pointer;
+    }
+}
+
+.layout__overlay{
+    width:100vh;
+    height:100vh;
+    position:fixed;
+    top:0;
+    left:0;
+    background:rgba(128, 124, 124, 0.836);
+    z-index:97;
 }
 
