--- a/src/components/ApiLogs/ApiLogs.scss
+++ b/src/components/ApiLogs/ApiLogs.scss
@@ -5,21 +5,20 @@
     padding:0 2rem;
     width:100%;
     overflow-y: scroll;  
-    //background:blue;
-}
-
-
-@media (max-width: 800px){
-    .apilogs{
+    @media (max-width: 800px) {
+        padding:0 1rem;
         overflow-x: scroll;
         height:auto;
         overflow-y: visible;
         width:inherit; 
     }
+    
+    @media (max-width: 600px){
+        
+            margin-right:1rem;    
+        
+    }
+    //background:blue;
 }
 
-@media (max-width: 600px){
-    .apilogs{   
-        margin-right:1rem;    
-    }
-}
+
