--- a/src/components/LogNav/LogNav.scss
+++ b/src/components/LogNav/LogNav.scss
@@ -5,6 +5,9 @@
     display:flex;
     border-bottom:1px solid rgba(209,214,222,1);
     margin-top:.6rem;
+    @media (max-width: 800px) {
+        margin-left:1rem;
+    }
     &__link{
         margin-left:2rem;
         font-size:1.05rem;
@@ -12,6 +15,10 @@
         padding:1.3rem 0.2rem;
         // border-bottom:2px solid red;
         cursor:pointer;
+        @media (max-width: 800px) {
+            margin-left:0rem;
+            margin-right:1.5rem;
+        }
 
         
         &:hover{
