--- a/src/pages/AuditLogs/AuditLogs.scss
+++ b/src/pages/AuditLogs/AuditLogs.scss
@@ -17,6 +17,7 @@
         
         margin:0 .5rem;
         margin-top:3.5rem;
+        //scrollbar-width: none;
        // overflow: hidden;
     }
 }
