--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -11,6 +11,8 @@
         // height:auto;
         // background:red;
         
+        
+        
     }
 
     &__menu{
@@ -22,7 +24,7 @@
 }
 
 .layout__overlay{
-    width:100vh;
+    width:100vw;
     height:100vh;
     position:fixed;
     top:0;
