changed color of sidebar

--- a/src/components/ApiLogs/ApiLogs.scss
+++ b/src/components/ApiLogs/ApiLogs.scss
@@ -8,7 +8,7 @@
     @media (max-width: 800px) {
         padding:0 1rem;
         overflow-x: scroll;
-        height:inherit;
+        // height:inherit;
         overflow-y: visible;
         width:inherit; 
         
