--- a/src/pages/AuditLogs/AuditLogs.scss
+++ b/src/pages/AuditLogs/AuditLogs.scss
@@ -14,7 +14,7 @@
     .auditlogs{
         width:calc(100vw  - 1rem);
         overflow-y: visible;
-        
+        height: calc(100vh - 3.501rem);
         margin:0 .5rem;
         margin-top:3.5rem;
        
