--- a/src/App.scss
+++ b/src/App.scss
@@ -6,10 +6,10 @@
 }
 
 @media (max-width: 800px){
-  .App{
-      overflow-y:visible;
+  // .App{
+  //     overflow-y:visible;
      
-  }
+  // }
 }
 
 
