fixed api log table issues

--- a/src/components/ApiLogs/ApiLogs.scss
+++ b/src/components/ApiLogs/ApiLogs.scss
@@ -9,6 +9,7 @@
         padding:0 1rem;
         overflow-x: scroll;
         // height:inherit;
+        height:calc(100vh - 255px);
         overflow-y: visible;
         width:inherit; 
         
